# orc_fdw

./: .gitignore  LICENSE  LICENSE-EXTERNAL  Makefile  README.md  orc_fdw--1.0.0--1.1.0.sql  orc_fdw--1.1.0.sql  orc_fdw.control
expected/: create_table.out  import_schema.out  joins.out  misc.out  select.out
include/: orc_deparse.h  orc_fdw.h  orc_interface.h  orc_interface_typedefs.h  orc_wrapper.h
sample/: README.md
sample/data/: myfile.orc
sql/: create_table.sql  import_schema.sql  joins.sql  misc.sql  select.sql
src/: CMakeLists.txt  orc_deparse.cpp  orc_fdw.c  orc_interface.cpp  orc_wrapper.cpp
